# rep4

./: CMakeLists.txt
DM/: 2-2.c
DM/1-1/: 3a.c  3b.c  3c.c  4a.c  5a.c
DM/1-3/: tmv.c
DM/2-1/: task_1.c  task_13.c  task_6.c  task_8.c
OP/16/: lr_16.c  lr_16.h
exam/: exam.c  exam_2.c  exam_3.c  exam_3_test.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/algorithms/sort/: sort.c  sort.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array/: ordered_array.c  ordered_array.h
libs/data_structures/string/: string.c  string.h
libs/data_structures/unordered_array/: unordered_array.c  unordered_array.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
tests_for_labs/: lr_15(test_martix).c  lr_15(test_matrix).h  lr_16(test).c  lr_16(test).h
